[gd_scene load_steps=8 format=3 uid="uid://dp1hn135pmenu"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_lymtx"]
[ext_resource type="Texture2D" uid="uid://dmj5mvleb5bvc" path="res://ui_assets/menu/background_mask.png" id="2_32xw7"]
[ext_resource type="FontFile" uid="uid://clh3ck04e0cbq" path="res://fonts/CfPeruAdventureRegular-xO5R.ttf" id="2_r7hrc"]
[ext_resource type="Texture2D" uid="uid://bshodew3hkhl6" path="res://ui_assets/menu/play_button.png" id="3_3k8c6"]
[ext_resource type="Texture2D" uid="uid://c8fk2t17lxbli" path="res://ui_assets/menu/play_button_hover.png" id="4_mhx05"]
[ext_resource type="Texture2D" uid="uid://30efs10rgtu2" path="res://ui_assets/menu/MaskWheel.png" id="6_gpll0"]

[sub_resource type="LabelSettings" id="LabelSettings_fu884"]
font = ExtResource("2_r7hrc")
font_size = 175
font_color = Color(0.960784, 0.772549, 0.34902, 1)
outline_size = 5
outline_color = Color(0.160784, 0.52549, 0.462745, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lymtx")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -125.0
offset_right = 4.0
offset_bottom = 435.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_32xw7")
expand_mode = 2

[node name="TitleContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -362.5
offset_right = 362.5
offset_bottom = 175.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "tergesa"
label_settings = SubResource("LabelSettings_fu884")
uppercase = true

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -130.5
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0

[node name="CenterContainer" type="CenterContainer" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartGame" type="TextureButton" parent="ButtonContainer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("3_3k8c6")
texture_pressed = ExtResource("4_mhx05")
texture_hover = ExtResource("4_mhx05")

[node name="SeparateMask" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftPart" type="HBoxContainer" parent="SeparateMask"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="SeparateMask"]
layout_mode = 2
size_flags_horizontal = 6

[node name="MarginContainer" type="MarginContainer" parent="SeparateMask/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 120

[node name="CenterContainer" type="CenterContainer" parent="SeparateMask/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="MaskTexture" type="TextureRect" parent="SeparateMask/VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
texture = ExtResource("6_gpll0")

[connection signal="button_down" from="ButtonContainer/CenterContainer/StartGame" to="." method="_on_start_game_button_down"]
